--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,21 @@
         android:theme="@style/Theme.AnonyNotes"
         tools:targetApi="31">
         <activity
+            android:name=".Confirmation_Code"
+            android:exported="false"/>
+        <activity android:name=".Strong_Password_Creation"
+            android:exported="false"/>
+        <activity
             android:name=".forgot_password"
             android:exported="false" />
+        <activity android:name=".startup_page"
+            android:exported="false"/>
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
