Home, Write, Profile page added. Waiting for functionalites and database.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,13 @@
         <activity
             android:name=".Confirmation_Code"
             android:exported="false"/>
+        <activity android:name=".Profile_Page"
+            android:exported="false"/>
+        <activity android:name=".Home_Page"
+            android:exported="false"/>
         <activity android:name=".Strong_Password_Creation"
+            android:exported="false"/>
+        <activity android:name=".Write_Page"
             android:exported="false"/>
         <activity
             android:name=".forgot_password"
