--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AnonyNotes"
         tools:targetApi="31">
+        <activity android:name=".EditProfile_Bio"
+            android:exported="false"/>
+        <activity android:name=".EditProfile_Username"
+            android:exported="false"/>
+        <activity android:name=".EditProfile"
+            android:exported="false"/>
         <activity
             android:name=".Confirmation_Code"
             android:exported="false"/>
