--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AnonyNotes"
         tools:targetApi="31">
+        <activity android:name=".Change_Password"
+            android:exported="false"/>
+        <activity android:name=".Account_Status"
+            android:exported="false"/>
         <activity android:name=".EditProfile_Bio"
             android:exported="false"/>
         <activity android:name=".EditProfile_Username"
