--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AnonyNotes"
         tools:targetApi="31">
+        <activity android:name=".CommentSection"
+            android:exported="false"/>
+        <activity android:name=".MainActivity"
+            android:exported="false"/>
         <activity android:name=".Change_Password"
             android:exported="false"/>
         <activity android:name=".Account_Status"
@@ -43,7 +47,8 @@
             android:exported="false"/>
         <activity
             android:name=".SignUpActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".SplashActivity"
             android:exported="true">
